// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading should render 1`] = `
<div>
  <div
    class="css-p1pjm1"
  >
    <p
      class="chakra-text css-18spay2"
    >
      Loading
    </p>
  </div>
  <span
    class="chakra-env"
    hidden=""
  />
</div>
`;

exports[`loading should render custom text 1`] = `
<div>
  <div
    class="css-p1pjm1"
  >
    <p
      class="chakra-text css-18spay2"
    >
      Loading memes
    </p>
  </div>
  <span
    class="chakra-env"
    hidden=""
  />
</div>
`;

exports[`loading should render custom text and size 1`] = `
<div>
  <div
    class="css-1i92xjz"
  >
    <p
      class="chakra-text css-18spay2"
    >
      Loading memes
    </p>
  </div>
  <span
    class="chakra-env"
    hidden=""
  />
</div>
`;
